--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,7 +40,7 @@
                             <li id="li-archive"><a href="/archive" class="header-a-main" id="header-a-main-archive"><span class="am-icon-archive">&nbsp;归&nbsp;&nbsp;档</span></a></li>
                             <li id="li-update"><a href="/update" class="header-a-main" id="header-a-main-update"><span class="am-icon-calendar-plus-o">&nbsp;更&nbsp;&nbsp;新</span></a></li>
                             <li id="li-music"><a href="/music" class="header-a-main" id="header-a-main-music"><span class="am-icon-music">&nbsp;音乐馆</span></a></li>
-                            <li id="li-message"><a href="#turn-head" class="header-a-main" id="header-a-main-message"><span class="am-icon-pencil">&nbsp;留言板</span></a></li>
+                            <li id="li-message"><a href="/messageBoard" class="header-a-main" id="header-a-main-message"><span class="am-icon-pencil">&nbsp;留言板</span></a></li>
                             <li id="li-friends"><a href="/friends" class="header-a-main" id="header-a-main-friends"><span class="am-icon-mars">&nbsp;友&nbsp;&nbsp;链</span></a></li>
                             <li id="li-aboutMe"><a href="/aboutMe" class="header-a-main" id="header-a-main-aboutMe"><span class="am-icon-paper-plane-o">&nbsp;关于俺</span></a></li>
                         </ul>
@@ -100,14 +100,11 @@
     <!-- 指定页面跳转位置 -->
     <div id="turn-head"></div>
     <!-- 小名片（随页面滚动的哦） -->
-    <div class="main-right" id="main-right-div">
+    <div class="main-right am-show-lg-only" id="main-right-div">
 
         <!-- 名片目录，点进文章的时候再加进去 -->
         <div id="right-catalog-div">
-            <!--<ul class="right-catalog">
-                <li class="right-catalog-article right-catalog-style">文章目录</li>
-                <li class="right-catalog-user">作者信息</li>
-            </ul>-->
+
         </div>
 
         <div id="main-right-text">
@@ -150,36 +147,9 @@
     <div class="main-right-down"></div>
     <!-- 主体内容 -->
     <div id="art-list">
-
     </div>
-   <!-- <div class="main-middle" id="main-middle-1">
-        &lt;!&ndash; 样板测试，写完后台后删掉（调用后台） &ndash;&gt;
-        <div class="main-middle-article">
-            <div class="article-badge">
-                    <a href="#" class="badge-a">臭不要脸</a>
-            </div>
-            <h1 class="article-title">
-                <a class="article-title-link" href="#">
-                    宇宙超级无敌玉树临风温柔体贴第一大帅哥的第一篇文章
-                </a>
-            </h1>
-            <div class="article-meta">
-                <span class="am-badge am-badge-success" id="article-meta-type">原创</span>
-                <span class="am-icon-calendar"></span><span class="meta-text meta-calendar-text">2018-12-16</span>
-                <a class="am-icon-tags-aa" href="#"><span class="am-icon-tags"></span><span class="meta-text meta-tags-text">Spring boot</span></a>
-                <span class="am-icon-eye"></span><span class="meta-text meta-eye-text">666</span>
-            </div>
-            <div class="article-content">
-                嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤嘤……
-            </div>
-            <div class="article-button">
-                <a class="article-btn" href="#">阅读全文 »</a>
-            </div>
 
-        </div>
-    </div>-->
-
-    <div class="main-left-double">
+    <div class="main-left-double am-show-lg-only">
         <i class="fa fa-quote-left" style="float: left"></i><br/>
         <div class="main-left-text">
             <p>你一直说自己没努力</p>
@@ -188,7 +158,7 @@
         </div>
         <i class="fa fa-quote-right" style="float: right; margin-right: 10px; margin-top: 10px"></i>
     </div>
-    <div class="main-left">
+    <div class="main-left  am-show-lg-only">
         <i class="fa fa-quote-left" style="float: left"></i><br/>
         <div class="main-left-text">
             <p id="left-pp">你应该要学着做你自己</p>
@@ -247,6 +217,8 @@
             $("#weixin-img").css("display", "none");
         });
     </script>
+
+    <!-- 定时 -->
     <script type="text/javascript">
         /* 尾部定时 */
         var int = self.setInterval("clock()", 1000);
