--- a/src/main/resources/templates/article.html
+++ b/src/main/resources/templates/article.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:http="http://www.w3.org/1999/xhtml"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="Cache-Control" content="no-siteapp" />
+    <!-- 网站主题 -->
+    <meta name="subject" content="Seaguller的博客网站">
+    <!-- 页面关键词 -->
+    <meta name="keywords" content="web, 后端, spring boot, spring, java, 博客, 学习, 程序员, 编程, 文章">
+    <!-- 页面描述内容 -->
+    <meta name="description" content="Seaguller的博客文章~">
+    <!-- 移动端优化 -->
+    <meta name ="viewport" content ="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no">
     <title>Seaguller的小窝~</title>
     <link href="https://cdn.bootcss.com/amazeui/2.7.2/css/amazeui.min.css" rel="stylesheet">
     <link href="../static/css/main.css" rel="stylesheet" />
@@ -18,7 +27,7 @@
 <input id="articleId" type="hidden" th:value="${articleId}" />
 <div id="main-class-text">
     <!-- 主页大图 -->
-    <div id="table-picture" style="background-image: url('../static/img/bk-10.jpg')"></div>
+    <div id="table-picture" style="background-image: url('../static/img/bk-1.jpg')"></div>
     <!-- 标题栏 -->
     <div class="head-one">
         <header class="am-topbar am-topbar-inverse am-topbar-fixed-top">
@@ -34,15 +43,58 @@
                         <li id="li-archive"><a href="/archive" class="header-a-main" id="header-a-main-archive"><span class="am-icon-archive">&nbsp;归&nbsp;&nbsp;档</span></a></li>
                         <li id="li-update"><a href="/update" class="header-a-main" id="header-a-main-update"><span class="am-icon-calendar-plus-o">&nbsp;更&nbsp;&nbsp;新</span></a></li>
                         <li id="li-music"><a href="/music" class="header-a-main" id="header-a-main-music"><span class="am-icon-music">&nbsp;音乐馆</span></a></li>
-                        <li id="li-message"><a href="#turn-head" class="header-a-main" id="header-a-main-message"><span class="am-icon-pencil">&nbsp;留言板</span></a></li>
-                        <li id="li-friends"><a href="#turn-head" class="header-a-main" id="header-a-main-friends"><span class="am-icon-mars">&nbsp;后&nbsp;&nbsp;宫</span></a></li>
-                        <li id="li-aboutMe"><a href="#turn-head" class="header-a-main" id="header-a-main-aboutMe"><span class="am-icon-paper-plane-o">&nbsp;关于俺</span></a></li>
-
-                        <li id="li-login"><a href="/login" class="header-a-main" id="header-a-main-login"><span class="am-icon-hand-paper-o">&nbsp;登陆&nbsp;</span><span class="am-icon-hand-paper-o"></span></a></li>
+                        <li id="li-message"><a href="/messageBoard" class="header-a-main" id="header-a-main-message"><span class="am-icon-pencil">&nbsp;留言板</span></a></li>
+                        <li id="li-friends"><a href="/friends" class="header-a-main" id="header-a-main-friends"><span class="am-icon-mars">&nbsp;友&nbsp;&nbsp;链</span></a></li>
+                        <li id="li-aboutMe"><a href="/aboutMe" class="header-a-main" id="header-a-main-aboutMe"><span class="am-icon-paper-plane-o">&nbsp;关于俺</span></a></li>
                     </ul>
+                    <div class="am-btn-group login-button-head"  th:unless="${#httpServletRequest.remoteUser}">
+                        <div class="am-dropdown" data-am-dropdown>
+                            <button class="am-btn am-dropdown-toggle login-button" data-am-dropdown-toggle> <span class="am-icon-user login-icon"></span></button>
+                            <ul class="am-dropdown-content login-content">
+                                <li><a href="/login" class="login-content-a"><span class="am-icon-leaf">&nbsp;&nbsp;&nbsp;登录</span></a></li>
+                                <li><a href="/register" class="login-content-a"><span class="am-icon-user-plus">&nbsp;&nbsp;&nbsp;注册</span></a></li>
+                                <li><a class="login-content-a doc-prompt-toggle"><span class="am-icon-bug">&nbsp;&nbsp;&nbsp;反馈</span></a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="am-btn-group login-button-head"  th:if="${#httpServletRequest.remoteUser}">
+                        <div class="am-dropdown" data-am-dropdown id="login-sign-drop">
+                            <button class="am-btn am-btn-secondary am-topbar-btn am-btn-sm am-dropdown-toggle" data-am-dropdown-toggle id="login-sign-name">
+                                <span id="login-user-name"></span>
+                                <span class="am-icon-caret-down"></span>
+                            </button>
+                            <ul class="am-dropdown-content login-content login-content-b" id="login-content-ul">
+                                <li><a href="/user" class="login-content-a"><span class="am-icon-leaf">&nbsp;&nbsp;&nbsp;个人中心</span></a></li>
+                                <li sec:authorize="hasAnyRole('ROLE_ADMIN')"><a href="/admin" class="login-content-a"><span class="am-icon-cog">&nbsp;&nbsp;&nbsp;管理中心</span></a></li>
+                                <li><a class="login-content-a doc-prompt-toggle"><span class="am-icon-bug">&nbsp;&nbsp;&nbsp;反&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;馈</span></a></li>
+                                <hr id="log-hr"/>
+                                <li><a href="/logout" class="login-content-a"><span class="am-icon-sign-out">&nbsp;&nbsp;&nbsp;退出登录</span></a></li>
+                            </ul>
+                        </div>
+                        <button class="am-btn" id="login-button-circle" sec:authorize="hasAnyRole('ROLE_ADMIN')"><span id="login-button-write">写</span></button>
+                    </div>
                 </div>
             </div>
         </header>
+    </div>
+    <!-- 反馈窗口 -->
+    <div class="am-modal am-modal-prompt " tabindex="-1" id="my-prompt">
+        <div class="am-modal-dialog">
+            <div class="am-modal-hd">反馈</div>
+            <div class="am-modal-bd">
+                你有什么要悄悄告诉我滴吗！(`・ω・´)
+                <textarea maxlength="1000" id="feedback-text" style="resize:none;" class="am-modal-prompt-input private-conversation" placeholder="请填写您对本站的建议或者私下要对小弟说滴话~"></textarea>
+                <br/>
+                <textarea maxlength="50" style="resize:none;" id="feedback-contact" class="am-modal-prompt-input private-conversation-two" placeholder="方便留下您的联系方式咩？（选填）"></textarea>
+            </div>
+            <div class="am-modal-footer">
+                <span class="am-modal-btn" id="feedback-submit" data-am-modal-confirm>提交</span>
+                <span class="am-modal-btn" data-am-modal-cancel>取消</span>
+            </div>
+
+
+        </div>
     </div>
     <!-- 文字喵 -->
     <h1 id="headline" class="head-picture-font" >喵&nbsp;呜~&nbsp;喵&nbsp;帕&nbsp;斯~！</h1>
@@ -96,30 +148,6 @@
                     <div id="wordsView">
                         <textarea style="display:none;" name="editormd-markdown-doc" id="article-content-text"></textarea>
                     </div>
-                    <!--<h1>a</h1>
-                    <h2>c</h2>
-                    <h3>aaa</h3>
-                    <h3>bbb</h3>
-                    <h2>d</h2>
-                    <h3>ccc</h3>
-                    <h3>ddd</h3>
-                    <h2>1</h2>
-                    &lt;!&ndash;<h3>e</h3>
-                    <h3>f</h3>
-                    <h4>i</h4>
-                    <h5>k</h5>
-                    <h4>j</h4>
-                    <h5>aaaaa</h5>&ndash;&gt;
-                    <h1>b</h1>
-                    <h2>g</h2>
-                    <h3>飒飒大师</h3>
-                    <h3>bbbb</h3>
-                    <h2>h</h2>
-                    <h3>cccc</h3>
-                    <h3>dddd</h3>
-                    <h2>4</h2>
-                    <p>asdasdasdasdsa殺殺殺</p>-->
-
                 </div>
 
                 <div id="article-share">
@@ -223,7 +251,16 @@
         </div>
     </div>
 
-    <div class="main-left">
+    <div class="main-left-double am-show-lg-only">
+        <i class="fa fa-quote-left" style="float: left"></i><br/>
+        <div class="main-left-text">
+            <p>你一直说自己没努力</p>
+            <p>那你努力100%试一下啊</p>
+            <p>你的天空你不想飞一下吗？</p>
+        </div>
+        <i class="fa fa-quote-right" style="float: right; margin-right: 10px; margin-top: 10px"></i>
+    </div>
+    <div class="main-left  am-show-lg-only">
         <i class="fa fa-quote-left" style="float: left"></i><br/>
         <div class="main-left-text">
             <p id="left-pp">你应该要学着做你自己</p>
@@ -279,7 +316,7 @@
 <script type="text/javascript">
     loadlive2d("live2d", "../static/live2d/model/kesshouban/model.json");
 </script>
-<!-- 定时设置 -->
+<!-- 定时 -->
 <script type="text/javascript">
     /* 尾部定时 */
     var int = self.setInterval("clock()", 1000);
@@ -288,10 +325,10 @@
         var nowDay = new Date();
         var localDay = new Date("2019-03-17 00:00:00");
         var time = parseInt((nowDay.getTime()-localDay.getTime())/1000);
-/*
-        var runTimeDate = new Date(parseInt(time));
-        var runTime = runTimeDate.getDay() + "天" + runTimeDate.getHours() + "小时" + runTimeDate.getMinutes() + "分" + runTimeDate.getSeconds() + "秒";
-*/
+        /*
+                var runTimeDate = new Date(parseInt(time));
+                var runTime = runTimeDate.getDay() + "天" + runTimeDate.getHours() + "小时" + runTimeDate.getMinutes() + "分" + runTimeDate.getSeconds() + "秒";
+        */
         var min = parseInt(time/60);
         var hour = parseInt(time/60/60);
         var day = parseInt(time/60/60/24);
@@ -306,12 +343,24 @@
             runTime = hour + "时" + mh + "分" + (time-hour*3600-mh*60) + "秒"
         } else {
             var hd = hour - day*24;
-            var mh = min - hd*60;
-            runTime = day + "天" + hd + "时" + mh + "分" + (time-day*24-hd*3600-mh*60) + "秒";
+            var mh = min - day*24*60 - hd*60;
+            runTime = day + "天" + hd + "时" + mh + "分" + (time-day*24*3600-hd*3600-mh*60) + "秒";
         }
 
         $("#clock").html(runTime);
     }
+</script>
+
+<!-- 反馈弹窗 -->
+<script type="text/javascript">
+    $(function() {
+        $('.doc-prompt-toggle').on('click', function() {
+            $("#feedback-text").val("");
+            $('#my-prompt').modal({
+                relatedTarget: this
+            });
+        });
+    });
 </script>
 <!-- 点赞+1 -->
 <script type="text/javascript">
