--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -7,27 +7,25 @@
     <!-- 网站主题 -->
     <meta name="subject" content="Seaguller的博客网站">
     <!-- 页面关键词 -->
-    <meta name="keywords" content="web, 后端, spring boot, spring, java, 博客, 学习, 程序员, 编程, 登录">
+    <meta name="keywords" content="web, 后端, spring boot, spring, java, 博客, 学习, 程序员, 编程, 403">
     <!-- 页面描述内容 -->
-    <meta name="description" content="Seaguller的博客登录~">
+    <meta name="description" content="Seaguller的博客小站403页面~">
     <!-- 移动端优化 -->
     <meta name ="viewport" content ="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no">
-    <!-- 从该页面发出的请求不会包含referer -->
-    <meta name="referrer" content="never">
     <title>Seaguller的小窝~</title>
     <link href="https://cdn.bootcss.com/amazeui/2.7.2/css/amazeui.min.css" rel="stylesheet">
-    <link href="../static/css/main.css" rel="stylesheet" />
+    <link href="../../static/css/main.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://dreamsky.github.io/main/blog/common/init.css">
     <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../static/live2d/css/waifu.css" />
-    <link href="../static/css/article.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="../../static/live2d/css/waifu.css" />
+    <link href="../../static/css/article.css" rel="stylesheet"/>
 
-    <link href="../static/css/login.css" rel="stylesheet"/>
+    <link href="../../static/css/game.css" rel="stylesheet"/>
 </head>
 <body>
 <div id="main-class-text">
     <!-- 主页大图 -->
-    <div id="table-picture" style="background-image: url('../static/img/bk-1.jpg')"></div>
+    <div id="table-picture" style="background-image: url('../../static/img/bk-1.jpg')"></div>
     <!-- 标题栏 -->
     <div class="head-one">
         <header class="am-topbar am-topbar-inverse am-topbar-fixed-top">
@@ -35,7 +33,7 @@
                 <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse-4">
                     <ul class="am-nav am-nav-pills am-topbar-nav">
                         <a id="header-text" href="/">Seaguller的小窝~</a>
-                        <li id="li-main">
+                        <li class="am-active" id="li-main">
                             <a href="/" class="header-a-main" id="header-a-main-one">
                                 <span class="am-icon-home">&nbsp;首&nbsp;&nbsp;页</span>
                             </a>
@@ -43,7 +41,7 @@
                         <li id="li-archive"><a href="/archive" class="header-a-main" id="header-a-main-archive"><span class="am-icon-archive">&nbsp;归&nbsp;&nbsp;档</span></a></li>
                         <li id="li-update"><a href="/update" class="header-a-main" id="header-a-main-update"><span class="am-icon-calendar-plus-o">&nbsp;更&nbsp;&nbsp;新</span></a></li>
                         <li id="li-music"><a href="/music" class="header-a-main" id="header-a-main-music"><span class="am-icon-music">&nbsp;音乐馆</span></a></li>
-                        <li id="li-message"><a href="/messageBoard" class="header-a-main" id="header-a-main-message"><span class="am-icon-pencil">&nbsp;留言板</span></a></li>
+                        <li id="li-message"><a href="#turn-head" class="header-a-main" id="header-a-main-message"><span class="am-icon-pencil">&nbsp;留言板</span></a></li>
                         <li id="li-friends"><a href="/friends" class="header-a-main" id="header-a-main-friends"><span class="am-icon-mars">&nbsp;友&nbsp;&nbsp;链</span></a></li>
                         <li id="li-aboutMe"><a href="/aboutMe" class="header-a-main" id="header-a-main-aboutMe"><span class="am-icon-paper-plane-o">&nbsp;关于俺</span></a></li>
                     </ul>
@@ -99,62 +97,50 @@
     <!-- 文字喵 -->
     <h1 id="headline" class="head-picture-font" >喵&nbsp;呜~&nbsp;喵&nbsp;帕&nbsp;斯~！</h1>
     <!-- 旋转小陀螺头像 -->
-    <div class="head-sculpture"><img src="../static/img/maoer.gif" class="header-img-one"/></div>
+    <div class="head-sculpture"><img src="../../static/img/maoer.gif" class="header-img-one"/></div>
     <!-- 指定页面跳转位置 -->
     <div id="turn-head"></div>
-
     <!-- 主体内容 -->
     <div id="art-list">
-        <div class="register-title-line">
-            <span class="tit">客官请进</span>
+        <img src="../../static/img/403.png" style="width: 700px;margin-bottom: 80px;margin-left: -130px;"/>
+        <div style="margin-top: -80px;">
+            <div class="error-text">您好像并麻油权限访问这个页面哟~w(゜Д゜)w</div>
+            <div class="error-text" style="margin-left: 50px;">不如玩个游戏放松一下(`・ω・´)~</div>
         </div>
-        <div class="am-alert am-alert-warning error-alert" data-am-alert  th:if="${param.error}">
-            用户名或密码错误！
+        <div class="wrapper" style="margin-left: -200px">
+            <canvas id="canvas" width="960" height="640">不支持画布</canvas>
+            <p>按［空格］暂停或继续</p>
         </div>
-        <form class="am-form am-form-horizontal" method="post" action="/loginCheck" onsubmit="return toVaild()" >
-            <div class="am-form-group" id="form-phone">
-                <label for="doc-ipt-3" class="am-u-sm-2 am-form-label am-form-group-label">手机</label>
-                <div class="am-u-sm-10">
-                    <input type="text" class="form-input-text am-round am-form-field" id="doc-ipt-3" placeholder="输入手机就可以进店了哟~" name="username">
-                    <div class="form-text-error" id="form-text-error-phone"></div>
-                    <span class="am-icon-check icon-success" id="icon-phone-success"></span>
-                </div>
-            </div>
 
-            <div class="am-form-group"  id="form-password">
-                <label for="doc-ipt-pwd-2" class="am-u-sm-2 am-form-label am-form-group-label">密码</label>
-                <div class="am-u-sm-10">
-                    <input type="password" class="form-input-text am-round am-form-field" id="doc-ipt-pwd-2" placeholder="我不偷看！绝不！(/ω·\*)" name="password">
-                    <div class="form-text-error" id="form-text-error-password"></div>
-                    <span class="am-icon-check icon-success" id="icon-password-success"></span>
-                </div>
-            </div>
-
-            <div class="am-form-group">
-                <div class="am-u-sm-offset-2 am-u-sm-10">
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox"> 我记住你嘞！
-                        </label>
-                    </div>
-                </div>
-            </div>
-
-            <div class="am-form-group">
-                <div class="am-u-sm-10 am-u-sm-offset-2">
-                    <button type="submit" id="loginFormBtn" class="article-button article-btn am-btn am-btn-default">进&nbsp;&nbsp;&nbsp;&nbsp;店</button>
-                    <input class="article-button article-btn am-btn am-btn-primary am-btn-sm am-fl no_submit" id="registerUpdateFormBtn" style="border-radius: 5px" type="button" value="忘记密码">
-                </div>
-            </div>
-        </form>
     </div>
-
-
+    <div class="main-left-double">
+        <i class="fa fa-quote-left" style="float: left"></i><br/>
+        <div class="main-left-text">
+            <p>你一直说自己没努力</p>
+            <p>那你努力100%试一下啊</p>
+            <p>你的天空你不想飞一下吗？</p>
+        </div>
+        <i class="fa fa-quote-right" style="float: right; margin-right: 10px; margin-top: 10px"></i>
+    </div>
+    <div class="main-left">
+        <i class="fa fa-quote-left" style="float: left"></i><br/>
+        <div class="main-left-text">
+            <p id="left-pp">你应该要学着做你自己</p>
+            <p>面对真实的自我</p>
+            <p>只要做到这一点</p>
+            <p>你就什么都不用惧怕</p>
+            <p id="left-pp-last">--- 《猫的报恩》</p>
+        </div>
+        <i class="fa fa-quote-right" style="float: right"></i>
+        <div class="main-left-last-text">
+            <div id="main-left-last-text-one">无论夜晚多么黑暗，</div>
+            <div id="main-left-last-text-two">黎明总会如约而至。</div>
+        </div>
+    </div>
     <div class="waifu ">
         <div class="waifu-tips" style="opacity:0"></div>
         <canvas id="live2d" width="280" height="250" class="live2d"></canvas>
     </div>
-
 </div>
 <footer id="footer" class="footer">
     <hr/>
@@ -164,22 +150,24 @@
         <p>蜀ICP备18000229号</p>
     </div>
 </footer>
+
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/amazeui/2.7.2/js/amazeui.min.js"></script>
 <!-- 字体阴影特效 -->
-<script type="text/javascript" src="../static/js/shine.min.js"></script>
+<script type="text/javascript" src="../../static/js/shine.min.js"></script>
 <!-- 标题栏浮动隐藏JS -->
 <script type="text/javascript" src="https://npmcdn.com/headroom.js@0.9.3/dist/headroom.min.js"></script>
 <!-- 主页JS -->
-<script src="../static/js/main.js" type="text/javascript"></script>
-<script src="../static/js/login.js" type="text/javascript"></script>
+<script src="../../static/js/main.js" type="text/javascript"></script>
+<script src="../../static/game/game.js" type="text/javascript"></script>
+<script src="../../static/game/index.js" type="text/javascript"></script>
 <!-- 背景线条 -->
 <script type="text/javascript" src="https://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>　
 
-<script type="text/javascript" src="../static/live2d/js/live2d.js"></script>
-<script type="text/javascript" src="../static/live2d/js/waifu.js"></script>
+<script type="text/javascript" src="../../static/live2d/js/live2d.js"></script>
+<script type="text/javascript" src="../../static/live2d/js/waifu.js"></script>
 <script type="text/javascript">
-    loadlive2d("live2d", "../static/live2d/model/kesshouban/model.json");
+    loadlive2d("live2d", "../../static/live2d/model/kesshouban/model.json");
 </script>
 <script type="text/javascript">
     /* 微信翻转 */
@@ -194,8 +182,6 @@
         $("#weixin-img").css("display", "none");
     });
 </script>
-
-<!-- 定时 -->
 <script type="text/javascript">
     /* 尾部定时 */
     var int = self.setInterval("clock()", 1000);
@@ -241,5 +227,7 @@
         });
     });
 </script>
+
 </body>
+
 </html>
