--- a/src/main/resources/templates/forgetPassword.html
+++ b/src/main/resources/templates/forgetPassword.html
@@ -7,9 +7,9 @@
     <!-- 网站主题 -->
     <meta name="subject" content="Seaguller的博客网站">
     <!-- 页面关键词 -->
-    <meta name="keywords" content="web, 后端, spring boot, spring, java, 博客, 学习, 程序员, 编程, 登录">
+    <meta name="keywords" content="web, 后端, spring boot, spring, java, 博客, 学习, 程序员, 编程, 找回密码">
     <!-- 页面描述内容 -->
-    <meta name="description" content="Seaguller的博客登录~">
+    <meta name="description" content="Seaguller的博客密码找回~">
     <!-- 移动端优化 -->
     <meta name ="viewport" content ="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no">
     <!-- 从该页面发出的请求不会包含referer -->
@@ -22,7 +22,8 @@
     <link rel="stylesheet" href="../static/live2d/css/waifu.css" />
     <link href="../static/css/article.css" rel="stylesheet"/>
 
-    <link href="../static/css/login.css" rel="stylesheet"/>
+    <link href="../static/css/register.css" rel="stylesheet"/>
+    <link href="../static/css/forgetPassword.css" rel="stylesheet"/>
 </head>
 <body>
 <div id="main-class-text">
@@ -95,8 +96,7 @@
 
 
         </div>
-    </div>
-    <!-- 文字喵 -->
+    </div>    <!-- 文字喵 -->
     <h1 id="headline" class="head-picture-font" >喵&nbsp;呜~&nbsp;喵&nbsp;帕&nbsp;斯~！</h1>
     <!-- 旋转小陀螺头像 -->
     <div class="head-sculpture"><img src="../static/img/maoer.gif" class="header-img-one"/></div>
@@ -106,46 +106,41 @@
     <!-- 主体内容 -->
     <div id="art-list">
         <div class="register-title-line">
-            <span class="tit">客官请进</span>
+            <span class="tit">密码找回</span>
         </div>
-        <div class="am-alert am-alert-warning error-alert" data-am-alert  th:if="${param.error}">
-            用户名或密码错误！
-        </div>
-        <form class="am-form am-form-horizontal" method="post" action="/loginCheck" onsubmit="return toVaild()" >
+        <form class="am-form am-form-horizontal" method="post" action="/retrievePassword" onsubmit="return toVaild()" style="margin-left: 200px;" >
             <div class="am-form-group" id="form-phone">
-                <label for="doc-ipt-3" class="am-u-sm-2 am-form-label am-form-group-label">手机</label>
-                <div class="am-u-sm-10">
-                    <input type="text" class="form-input-text am-round am-form-field" id="doc-ipt-3" placeholder="输入手机就可以进店了哟~" name="username">
-                    <div class="form-text-error" id="form-text-error-phone"></div>
-                    <span class="am-icon-check icon-success" id="icon-phone-success"></span>
-                </div>
+                <label class="am-form-group-label" for="doc-ipt-phone-1">手机</label>
+                <input type="text" class="am-form-field am-round" id="doc-ipt-phone-1" placeholder="请填写您的常用手机号" name="phone">
+                <div class="form-text-error" id="form-text-error-phone"></div>
+                <span class="am-icon-check icon-success" id="icon-phone-success"></span>
             </div>
 
-            <div class="am-form-group"  id="form-password">
-                <label for="doc-ipt-pwd-2" class="am-u-sm-2 am-form-label am-form-group-label">密码</label>
-                <div class="am-u-sm-10">
-                    <input type="password" class="form-input-text am-round am-form-field" id="doc-ipt-pwd-2" placeholder="我不偷看！绝不！(/ω·\*)" name="password">
-                    <div class="form-text-error" id="form-text-error-password"></div>
-                    <span class="am-icon-check icon-success" id="icon-password-success"></span>
-                </div>
+            <div class="am-form-group" id="form-captcha">
+                <label class="am-form-group-label" for="doc-ipt-captcha-1">验证码</label>
+                <input type="text" class="am-form-field am-round" id="doc-ipt-captcha-1" placeholder="输入您收到的验证码哦" name="captcha">
+                <div class="form-text-error" id="form-text-error-captcha"></div>
+                <span class="am-icon-check icon-success" id="icon-captcha-success"></span>
+            </div>
+            <div class="group-getTest">
+                <button class="am-btn am-btn-secondary am-round" id="msg-btn" type="button">获取验证码</button>
             </div>
 
-            <div class="am-form-group">
-                <div class="am-u-sm-offset-2 am-u-sm-10">
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox"> 我记住你嘞！
-                        </label>
-                    </div>
-                </div>
+            <div class="am-form-group" id="form-password">
+                <label class="am-form-group-label" for="doc-ipt-pwd-1">新密码</label>
+                <input type="password" class="am-form-field am-round" id="doc-ipt-pwd-1" placeholder="这次要设一个更难一点滴！" name="password">
+                <div class="form-text-error" id="form-text-error-password"></div>
+                <span class="am-icon-check icon-success" id="icon-password-success"></span>
             </div>
 
-            <div class="am-form-group">
-                <div class="am-u-sm-10 am-u-sm-offset-2">
-                    <button type="submit" id="loginFormBtn" class="article-button article-btn am-btn am-btn-default">进&nbsp;&nbsp;&nbsp;&nbsp;店</button>
-                    <input class="article-button article-btn am-btn am-btn-primary am-btn-sm am-fl no_submit" id="registerUpdateFormBtn" style="border-radius: 5px" type="button" value="忘记密码">
-                </div>
+            <div class="am-form-group" id="form-password-confirm">
+                <label class="am-form-group-label" for="doc-ipt-pwd-confirm-1">确认密码</label>
+                <input type="password" class="am-form-field am-round" id="doc-ipt-pwd-confirm-1" placeholder="确认新密码鸭~" name="password-confirm">
+                <div class="form-text-error" id="form-text-error-password-confirm"></div>
+                <span class="am-icon-check icon-success" id="icon-password-confirm-success"></span>
             </div>
+
+            <input class="article-button article-btn am-btn am-btn-primary am-btn-sm am-fl no_submit" id="registerFormBtn" style="border-radius: 5px" type="submit" value="完 成">
         </form>
     </div>
 
@@ -172,7 +167,7 @@
 <script type="text/javascript" src="https://npmcdn.com/headroom.js@0.9.3/dist/headroom.min.js"></script>
 <!-- 主页JS -->
 <script src="../static/js/main.js" type="text/javascript"></script>
-<script src="../static/js/login.js" type="text/javascript"></script>
+<script src="../static/js/forgetPassword.js" type="text/javascript"></script>
 <!-- 背景线条 -->
 <script type="text/javascript" src="https://cdn.bootcss.com/canvas-nest.js/1.0.1/canvas-nest.min.js"></script>　
 
